add info to index.html in bug-fix

--- a/index.html
+++ b/index.html
@@ -77,5 +77,45 @@
         the family will be eating and then preparing and making it. With 
         that said, I have no idea what I'm cooking tonight. 
     </p>
+    <br>
+    <h4>friday 21jan22</h4>
+    <p>So the kid is sick and the sambo is sick and I am super healthy 
+        and super tired. Sent in assignment 1 to Textilhögskolan last night. Did not 
+        expect CSN to deny my application so I'm really hoping for a 
+        passing grade to make up for points missed. Worst case scenario at the 
+        moment is a couple of months without CSN and that is doable! Obviously 
+        I'm hoping they'll accept my appeal, but you never know. 
+        <br> 
+        <br>
+        But let's skip to the good part: coding is fun! I've spent all my free 
+        time googling and watching youtube videos about git and html. I am kind 
+        of understanding git and I managed to do the inital commit, and the project
+        is on github now. Need to add the changes I am making right now (that is, 
+        rambling on about irrelevant stuff). 
+        <br>
+        <br>
+        Rak thai has closed so I bought us falafels. It's been a falafelly week. 
+    </p>
+    <br>
+    <h4>saturday 22jan22</h4>
+    <p>It's been a long week and it is not over yet. A few hours of work left. 
+        The rest of the family is still sick. Sent in assignment 2 for circular 
+        fashion so now I'm all done with that course. I have 2 days off 
+        from work next week (my very last days off - okay I'm feeling a bit 
+        sentimental about leaving this crap job) and should have time to hand 
+        in the final report in Innovative textiles so I can focus 100% on 
+        becoming a front end developer. I am really, really excited about all 
+        the learning over the next few months and - hopefully - starting 
+        a new career! 
+        <br>
+        <br>
+        I got an error when saving my changes due index.html was a read 
+        only file. Got the option to overwrite so I did. I am now wondering if 
+        it had something to do with git. Gonna go look in to that now. 
+        <br>
+        <br>
+        Making pizza tonight. 
+    </p>
+    <br>
 </body>
 </html>
